# blended-amm-math-toolkit-sol

./: .env.example  .gitignore  Makefile  README.md  commands.txt  deploy_rust.sh  foundry.toml  implementation-plan.md  math-engine.json  run_benchmark.sh
deployments/: testnet.json
js-client/: bootstrap.js  config.js  package-lock.json  package.json  test-enhanced-amm.js  test-gas-comparison.js  test-math-engine.js
script/: Bootstrap.s.sol  Deploy.s.sol  Deploy.sol
src/: BasicAMM.sol  EnhancedAMM.sol  IMathematicalEngine.sol
src/math-toolkit/: Cargo.toml
src/math-toolkit/src/: lib.rs
src/mathematical-engine/: Cargo.toml
src/mathematical-engine/src/: lib.rs
test/: GasBenchmark.t.sol
