[package]
name = "math-toolkit"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
fluentbase-sdk = { git = "https://github.com/fluentlabs-xyz/fluentbase", tag = "v0.3.6-dev", default-features=false }


[features]
default = ["std"]
std = ["fluentbase-sdk/std"]
wasm = []

# Exclude from foundry workspace
[workspace]
