[package]
name = "math-toolkit"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
alloy-sol-types = { version = "0.7.4", default-features = false }
fluentbase-sdk = { git = "https://github.com/fluentlabs-xyz/fluentbase", tag = "v0.3.7-dev", default-features=false }
libm = "0.2"

[features]
default = []
std = [
    "fluentbase-sdk/std",
    "alloy-sol-types/std"
]
wasm = []

[profile.release]
lto = true
opt-level = 'z'
panic = "abort"
strip = true

# Exclude from foundry workspace
[workspace]
