[package]
name = "mathematical-engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Fluentbase SDK - latest version
fluentbase-sdk = { git = "https://github.com/fluentlabs-xyz/fluentbase", tag = "v0.4.0-dev" }


[features]
default = ["std"]
std = ["fluentbase-sdk/std"]
wasm = []

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1

# Exclude from foundry workspace
[workspace]